# sfeir-school-rust

./: .gitignore  README.md
docs/: codelab.html  package-lock.json  package.json
docs/markdown/01-codelab/: 00-TITLE.md  01-BASICS.md  02-EXERCISE.md
docs/markdown/intro/: 00-TITLE.md
docs/markdown/speakers/: ly.md
docs/scripts/: slides-codelab.js
steps/codelab/: Cargo.toml  db.sql  index.html  instructions.md
steps/codelab/src/: main.rs  middleware.rs  utils.rs
