[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = "1.0.203"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "postgres", "macros", "chrono"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
